--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  a(href='meal-plan') Link to meal plan
+  a(href='custom-meal-planner') Link to meal plan
