--- a/views/meal-plan.pug
+++ b/views/meal-plan.pug
@@ -3,6 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  div IngredientsSection #{ingredientsSection}
+  div(id="ingredient-section") IngredientsSection #{ingredientsSection}
   a(href='/') Go back home
 
