--- a/views/meal-plan.pug
+++ b/views/meal-plan.pug
@@ -3,6 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  div(id="ingredient-section") IngredientsSection #{ingredientsSection}
+  h2 Ingredient Section
+  div(id="ingredient-section") 
   a(href='/') Go back home
 
